Fix Title. Fix calc-body
Stopped the title magnifying at a totally different
rate than the calculator.

Prevented the calculator from getting too narrow
when the viewport is very slim.

--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,12 @@ body {
 h1,
 .inp-out {
   font-family: digital-7;
+  font-size: 7vmin;
 }
 
 .calc-body {
   height: 80vh;
-  width: 50vw;
+  min-width: 30vw;
   display: flex;
   flex-direction: column;
   align-items: center;
